Fix #1770 by setting color-scheme in dark mode

--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -78,6 +78,7 @@
 		--card-multi: 92 88 9;
 		--card-colorless: 60 58 64;
 		--card-lands: 95 58 36;
+		color-scheme: dark;
   }
 }
 
